<resources>
    <string name="app_name" translatable="false">GnssRecord</string>
    <string name="position">Position</string>
    <string name="list">List</string>
    <string name="record">Record</string>
    <string name="satellite">Satellite</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="e_mail">E-Mail</string>
    <string name="please_login">Please login</string>
    <string name="please_fill">Please fill in your information</string>
    <string name="re_password">Re-Password</string>
    <string name="name">Name</string>
    <string name="earth_night" translatable="false">Earth night</string>
    <string name="start">Start</string>
    <string name="welcome">Welcome</string>
    <string name="stop">Stop</string>
    <string name="auto_scrollbar">Auto scrollbar</string>
    <string name="un_auto_scrollbar">Unauto scrollbar</string>
    <string name="logout">Logout</string>
    <string name="please_email">Please enter your email</string>
    <string name="please_password">Please enter your password</string>
    <string name="please_re_password">Please enter your re-password</string>
    <string name="login_failed">Login failed</string>
    <string name="please_name">Please enter your name</string>
    <string name="password_match">Passwords do not match</string>
    <string name="email_invalid">Email is invalid</string>
    <string name="password_6">Password should be at least 6 characters</string>
    <string name="please_internet">Please connect to the internet</string>
    <string name="ok">OK</string>
    <string name="sv_id" translatable="false">SvId</string>
    <string name="zero" translatable="false">0</string>
    <string name="unknown">Unknown</string>
    <string name="hyphen" translatable="false">-</string>
    <string name="file">File</string>
    <string name="rinex" translatable="false">Rinex</string>
    <string name="setting">Setting</string>
    <string name="open">Open</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="mark_name" translatable="false">Mark name</string>
    <string name="mark_type" translatable="false">Mark type</string>
    <string name="observer_name" translatable="false">Observer name</string>
    <string name="observer_agency_name" translatable="false">Observer agency name</string>
    <string name="receiver_number" translatable="false">Receiver number</string>
    <string name="receiver_type" translatable="false">Receiver type</string>
    <string name="receiver_version" translatable="false">Receiver version</string>
    <string name="antenna_number" translatable="false">Antenna number</string>
    <string name="antenna_type" translatable="false">Antenna type</string>
    <string name="antenna_eccentricity_east" translatable="false">Antenna eccentricity east</string>
    <string name="antenna_eccentricity_north" translatable="false">Antenna eccentricity north</string>
    <string name="antenna_height" translatable="false">Antenna height</string>
    <string name="restore_defaults">Restore Defaults</string>
    <string name="cancel">Cancel</string>
    <string name="please_confirm">Please confirm</string>
    <string name="upload">Upload</string>
    <string name="successfully">successfully</string>
    <string name="failed">failed</string>
    <string name="empty_file">Empty File !!</string>
    <string name="already_exists">already exists !</string>
    <string name="searching">Searching…</string>
    <string name="wait_location">Wait for raw measurement data</string>
    <string name="latitude">Latitude :</string>
    <string name="longitude">Longitude :</string>
    <string name="altitude">Altitude :</string>
    <string name="gps_time">GPS Time >></string>
    <string name="timer">Timer</string>
    <string name="zero_5_digit" translatable="false">00.00000</string>
    <string name="zero_time" translatable="false">00:00:00</string>
    <string name="zero_date" translatable="false">00/00/00</string>
    <string name="set">Set</string>
    <string name="hour">Hour</string>
    <string name="min">Min</string>
    <string name="sec">Sec</string>
    <string name="version">Version</string>
    <string name="confirm">Confirm</string>
    <string name="title_position_1">Satellite</string>
    <string name="title_position_2">Position</string>
    <string name="title_list_1">Satellite</string>
    <string name="title_list_2">List</string>
    <string name="title_record_1">Satellite</string>
    <string name="title_record_2">Record</string>
    <string name="close">Close</string>
    <string name="Gps" translatable="false">Gps</string>
    <string name="Sbas" translatable="false">Sbas</string>
    <string name="Glonass" translatable="false">Glonass</string>
    <string name="Qzss" translatable="false">Qzss</string>
    <string name="Beidou" translatable="false">Beidou</string>
    <string name="Galileo" translatable="false">Galileo</string>
    <string name="arrow" translatable="false">------></string>
    <string name="description">Description</string>
</resources>
