<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    tools:context="th.ac.kmutnb.cs.gnssraw.RecordLoginActivity">

    <LinearLayout
        android:id="@+id/recordLogin_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/thaisansneue_light"
            android:paddingEnd="10dp"
            android:paddingStart="0dp"
            android:text="@string/satellite"
            android:textColor="@color/colorWhite"
            android:textSize="60sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/thaisansneue_extrabold"
            android:text="@string/record"
            android:textColor="@color/colorWhite"
            android:textSize="60sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/recordLogin_boxLogin"
        android:layout_width="300dp"
        android:layout_height="180dp"
        android:layout_below="@+id/recordLogin_title"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:background="@drawable/bg_black_clear"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/thaisansneue_light"
            android:paddingEnd="0dp"
            android:paddingStart="30dp"
            android:paddingTop="10dp"
            android:text="@string/please_login"
            android:textColor="@color/colorGray"
            android:textSize="21sp" />

        <RelativeLayout
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_input_gray">

            <ImageView
                android:id="@+id/recordLogin_iconMail"
                android:layout_width="25dp"
                android:layout_height="17dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:contentDescription="@string/e_mail"
                android:src="@drawable/icon_mail" />

            <EditText
                android:id="@+id/recordLogin_inputMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/recordLogin_iconMail"
                android:background="@null"
                android:fontFamily="@font/thaisansneue_light"
                android:gravity="center_vertical"
                android:hint="@string/e_mail"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="21sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_input_gray">

            <ImageView
                android:id="@+id/recordLogin_iconPass"
                android:layout_width="17dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="25dp"
                android:contentDescription="@string/password"
                android:src="@drawable/icon_pass" />

            <EditText
                android:id="@+id/recordLogin_inputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="13dp"
                android:layout_toEndOf="@+id/recordLogin_iconPass"
                android:background="@null"
                android:fontFamily="@font/thaisansneue_light"
                android:gravity="center_vertical"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="21sp" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/recordLogin_boxLogin"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/recordLogin_btnLogin"
            android:layout_width="270dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:background="@drawable/bg_btn_white"
            android:fontFamily="@font/thaisansneue_semibold"
            android:gravity="center"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="@color/colorBlack"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/recordLogin_btnRegister"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:fontFamily="@font/thaisansneue_light"
            android:gravity="center"
            android:text="@string/register"
            android:textAllCaps="true"
            android:textColor="@color/colorGray"
            android:textSize="25sp" />

    </LinearLayout>


</RelativeLayout>
