<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <TextView
        android:id="@+id/dialogSatellite_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/thaisansneue_extrabold"
        android:text="@string/description"
        android:textSize="45sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialogSatellite_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/satellite"
                android:src="@drawable/ic_position_1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/thaisansneue_semibold"
                android:text="@string/arrow"
                android:textColor="@color/colorBlack"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/thaisansneue_semibold"
                android:text="@string/Gps"
                android:textColor="@color/colorBlack"
                android:textSize="25sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/satellite"
                android:src="@drawable/ic_position_2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/thaisansneue_semibold"
                android:text="@string/arrow"
                android:textColor="@color/colorBlack"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/thaisansneue_semibold"
                android:text="@string/Sbas"
                android:textColor="@color/colorBlack"
                android:textSize="25sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/satellite"
                android:src="@drawable/ic_position_3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/thaisansneue_semibold"
                android:text="@string/arrow"
                android:textColor="@color/colorBlack"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/thaisansneue_semibold"
                android:text="@string/Glonass"
                android:textColor="@color/colorBlack"
                android:textSize="25sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/satellite"
                android:src="@drawable/ic_position_4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/thaisansneue_semibold"
                android:text="@string/arrow"
                android:textColor="@color/colorBlack"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/thaisansneue_semibold"
                android:text="@string/Qzss"
                android:textColor="@color/colorBlack"
                android:textSize="25sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/satellite"
                android:src="@drawable/ic_position_5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/thaisansneue_semibold"
                android:text="@string/arrow"
                android:textColor="@color/colorBlack"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/thaisansneue_semibold"
                android:text="@string/Beidou"
                android:textColor="@color/colorBlack"
                android:textSize="25sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/satellite"
                android:src="@drawable/ic_position_6" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/thaisansneue_semibold"
                android:text="@string/arrow"
                android:textColor="@color/colorBlack"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/thaisansneue_semibold"
                android:text="@string/Galileo"
                android:textColor="@color/colorBlack"
                android:textSize="25sp" />

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>