<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    tools:context="th.ac.kmutnb.cs.gnssraw.RecordRegisterActivity">

    <LinearLayout
        android:id="@+id/recordRegister_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/thaisansneue_light"
            android:paddingEnd="10dp"
            android:paddingStart="0dp"
            android:text="@string/satellite"
            android:textColor="@color/colorWhite"
            android:textSize="60sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/thaisansneue_extrabold"
            android:text="@string/record"
            android:textColor="@color/colorWhite"
            android:textSize="60sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/recordRegister_boxRegister"
        android:layout_width="300dp"
        android:layout_height="270dp"
        android:layout_below="@+id/recordRegister_title"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:background="@drawable/bg_black_clear"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/thaisansneue_light"
            android:paddingEnd="0dp"
            android:paddingStart="30dp"
            android:paddingTop="10dp"
            android:text="@string/please_fill"
            android:textColor="@color/colorGray"
            android:textSize="21sp" />

        <RelativeLayout
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_input_gray">

            <ImageView
                android:id="@+id/recordRegister_iconMail"
                android:layout_width="25dp"
                android:layout_height="17dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:contentDescription="@string/e_mail"
                android:src="@drawable/icon_mail" />

            <EditText
                android:id="@+id/recordRegister_inputMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/recordRegister_iconMail"
                android:background="@null"
                android:fontFamily="@font/thaisansneue_light"
                android:gravity="center_vertical"
                android:hint="@string/e_mail"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="21sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_input_gray">

            <ImageView
                android:id="@+id/recordRegister_iconPass"
                android:layout_width="17dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="25dp"
                android:contentDescription="@string/password"
                android:src="@drawable/icon_pass" />

            <EditText
                android:id="@+id/recordRegister_inputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="13dp"
                android:layout_toEndOf="@+id/recordRegister_iconPass"
                android:background="@null"
                android:fontFamily="@font/thaisansneue_light"
                android:gravity="center_vertical"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="21sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_input_gray">

            <ImageView
                android:id="@+id/recordRegister_iconRePass"
                android:layout_width="17dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="25dp"
                android:contentDescription="@string/re_password"
                android:src="@drawable/icon_pass" />

            <EditText
                android:id="@+id/recordRegister_inputRePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="13dp"
                android:layout_toEndOf="@+id/recordRegister_iconRePass"
                android:background="@null"
                android:fontFamily="@font/thaisansneue_light"
                android:gravity="center_vertical"
                android:hint="@string/re_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="21sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_input_gray">

            <ImageView
                android:id="@+id/recordRegister_iconName"
                android:layout_width="18dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="25dp"
                android:contentDescription="@string/name"
                android:src="@drawable/icon_name" />

            <EditText
                android:id="@+id/recordRegister_inputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="12dp"
                android:layout_toEndOf="@+id/recordRegister_iconName"
                android:background="@null"
                android:fontFamily="@font/thaisansneue_light"
                android:gravity="center_vertical"
                android:hint="@string/name"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="21sp" />
        </RelativeLayout>


    </LinearLayout>


    <TextView
        android:id="@+id/recordRegister_btnRegister"
        android:layout_width="270dp"
        android:layout_height="55dp"
        android:layout_below="@+id/recordRegister_boxRegister"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_btn_white"
        android:fontFamily="@font/thaisansneue_semibold"
        android:gravity="center"
        android:text="@string/register"
        android:textAllCaps="true"
        android:textColor="@color/colorBlack"
        android:textSize="28sp" />


</RelativeLayout>
